--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ weatherapi.key=c1181aa6b6834ac88e405425240107
 token=2fe35368e9ab86
 
 OPENWEATHERMAP_API_KEY= 2c3727800ba54be0859bc3d52e2e82d5
+
+server.port=${PORT:3000}
