removed hardcoded ipaddress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ token=2fe35368e9ab86
 
 OPENWEATHERMAP_API_KEY= 2c3727800ba54be0859bc3d52e2e82d5
 
-server.port=${PORT:3000}
+#server.port=${PORT:3000}
